# cs360

./: 04-syntax.hs  06-parsing.hs  08-variables.hs  09-dynamic-types.hs  10-static-types.hs  11-small-step-reduction.hs  13-closures-and-types.hs  15-imp.hs  16-quilt-shallow-dsl.hs  17-quilt-deep-edsl.hs  18-monads.hs  CompileArith.hs  Parsing2.hs  README.md  class04.hs  class05.hs  class06.hs  class07.hs  class08.hs  class09.hs  class10.hs  class11.hs  class12.hs  class13.hs  class14.hs  class15.hs  class16.hs  count.imp  fact.imp  gcd.imp  primes.imp
Calculator/: Calculator.cabal
Calculator/app/: Main.hs
Calculator/src/: Calc.hs  Parsing.hs
Quilt/: .gitignore  Quilt.cabal
Quilt/app/: QuiltREPL.hs
Quilt/src/: Quilt.hs
