name:                Calculator
version:             0.1.0.0
synopsis:            cs360 project 2: calculator
description:         Please see README.md
homepage:            https://github.com/maximg/cs360
license:             BSD3
license-file:        LICENSE
author:              Maksim Golov
maintainer:          maxim.golov@gmail.com
copyright:           2017 Maksim Golov
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Calc
  other-modules:       Parsing
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable Calculator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Calculator
                     , haskeline
  default-language:    Haskell2010

test-suite Calculator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Calculator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Calculator
